--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/margin"
-        app:layout_constraintBottom_toTopOf="@id/main_button"
+        app:layout_constraintBottom_toTopOf="@id/sound_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_progress" />
+
+    <Button
+        android:id="@+id/sound_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        android:onClick="onClickSoundButton"
+        android:text="@string/sound_button_label"
+        app:layout_constraintBottom_toTopOf="@id/main_button"
+        app:layout_constraintTop_toBottomOf="@id/main_logview"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/main_input"
@@ -48,7 +59,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/main_button"
-        app:layout_constraintTop_toBottomOf="@id/main_logview" />
+        app:layout_constraintTop_toBottomOf="@id/sound_button" />
 
     <Button
         android:id="@+id/main_button"
